--- a/.github/workflows/main_hobby-app-api.yml
+++ b/.github/workflows/main_hobby-app-api.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+    paths:
+    - 'api/**'
   workflow_dispatch:
 
 env:
@@ -27,6 +29,7 @@ jobs:
 
       - name: 'Resolve Project Dependencies Using Npm'
         shell: pwsh
+        working-directory: ./api
         run: |
           pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
           npm install
